--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             margin-top: 80px;
             padding: 120px 0;
             text-align: center;
-            background: rgba(240, 249, 255, 0.3);
+            background: rgba(0, 0, 0, 0.2);
             position: relative;
             overflow: hidden;
         }
@@ -108,8 +108,14 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(240, 249, 255, 0.4) 0%, rgba(224, 242, 254, 0.4) 100%);
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.1) 100%);
             z-index: 0;
+        }
+
+        .hero > div {
+            background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.5) 0%, transparent 70%);
+            padding: 40px;
+            border-radius: 20px;
         }
 
         .hero::before {
@@ -139,15 +145,22 @@
             -webkit-text-fill-color: transparent;
             position: relative;
             z-index: 1;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            filter: drop-shadow(0 0 20px rgba(255, 255, 255, 0.8));
         }
 
         .hero .subtitle {
             font-size: 24px;
-            color: var(--gray-medium);
+            color: var(--primary-white);
             margin-bottom: 40px;
-            font-weight: 400;
+            font-weight: 600;
             position: relative;
             z-index: 1;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.4);
+            padding: 10px 30px;
+            border-radius: 50px;
+            display: inline-block;
         }
 
         .hero-cta {
