--- a/index.html
+++ b/index.html
@@ -644,7 +644,9 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">HORIZON HEIGHTS</div>
+            <div class="logo">
+                <img src="logo.png" alt="Horizon Heights Productions" style="height: 50px; width: auto; margin-right: 10px; vertical-align: middle;">
+            </div>
             <div class="nav-links">
                 <a href="#services">Services</a>
                 <a href="#portfolio">Portfolio</a>
@@ -662,8 +664,8 @@
             Your browser does not support the video tag.
         </video>
         <div style="position: relative; z-index: 1;">
-            <h1>Professional Aerial<br>Photography Services</h1>
-            <p class="subtitle">Elevate Your Visuals with Stunning Drone Photography & Videography</p>
+            <h1>Capturing Your Vision<br>From New Heights</h1>
+            <p class="subtitle">Professional Drone Services • Real Estate • Events • Social Media Content</p>
             <div class="hero-cta">
                 <a href="#book" class="book-btn">Book an Appointment</a>
                 <div class="social-links">
@@ -857,7 +859,9 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">HORIZON HEIGHTS PRODUCTIONS</div>
+            <div class="footer-logo">
+                <img src="logo.png" alt="Horizon Heights Productions" style="height: 80px; width: auto; margin-bottom: 20px;">
+            </div>
             
             <div class="footer-links">
                 <a href="#services">Services</a>
