--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo">
-                <img src="logo.png" alt="Horizon Heights Productions" style="height: 50px; width: auto; margin-right: 10px; vertical-align: middle;">
+                <img src="logo.jpg" alt="Horizon Heights Productions" style="height: 50px; width: auto; margin-right: 10px; vertical-align: middle;">
             </div>
             <div class="nav-links">
                 <a href="#services">Services</a>
@@ -860,7 +860,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="logo.png" alt="Horizon Heights Productions" style="height: 80px; width: auto; margin-bottom: 20px;">
+                <img src="logo.jpg" alt="Horizon Heights Productions" style="height: 80px; width: auto; margin-bottom: 20px;">
             </div>
             
             <div class="footer-links">
